CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(GBx LANGUAGES C VERSION 0.0.1)

LIST(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_SOURCE_DIR}/cmake")

OPTION(BUILD_TOOLS "Build tool executables." ON )
OPTION(LOG_VERBOSE "Build with verbose logging." OFF )
OPTION(LOG_INST    "Build with instruction logging." OFF )

FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(Readline)

IF(NOT TARGET SDL2::SDL2)
    ADD_LIBRARY(SDL2::SDL2 INTERFACE IMPORTED)
    SET_TARGET_PROPERTIES(SDL2::SDL2 PROPERTIES 
        INTERFACE_INCLUDE_DIRECTORIES ${SDL2_INCLUDE_DIRS}
        INTERFACE_LINK_LIBRARIES ${SDL2_LIBRARIES}
    )
ENDIF()

ADD_SUBDIRECTORY(emulator)

IF(BUILD_TOOLS)
    ADD_SUBDIRECTORY(tools/romdump)
ENDIF()